Fixed overlapping caurosel arrows

--- a/public/assets-v2/css/style.css
+++ b/public/assets-v2/css/style.css
@@ -8291,3 +8291,11 @@ h4,h3{
         color: white;
 
     }
+
+    .company-slider{
+      padding: 0 100px;
+    }
+
+    .company-slider .owl-item{
+      /* width: 253px !important; */
+    }
